--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -4,11 +4,19 @@ if(BLAS_FOUND)
   add_compile_options(${BLAS_LINKER_FLAGS})
 endif()
 
-add_subdirectory(forbar)
+include(FetchContent)
+FetchContent_Declare(
+  forbar
+  GIT_REPOSITORY https://github.com/yymmt742/forbar
+  GIT_TAG origin/main
+  GIT_PROGRESS TRUE
+  )
+FetchContent_MakeAvailable(forbar)
+
 add_subdirectory(mobbrmsd_2d)
 add_subdirectory(mobbrmsd_3d)
 add_subdirectory(mobbrmsd)
 
-if( CMAKE_BUILD_TYPE MATCHES "Debug" )
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_subdirectory(test)
 endif()
