[add] mod_mobbrmsd_batch_run.f90, mod_mobbrmsd_mst.f90

--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -31,6 +31,8 @@ target_sources(
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_header.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
+          ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_mst.f90
+          ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_batch_run.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90)
 
@@ -211,6 +213,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_header.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_state.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_mst.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_batch_run.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../test/mod_testutil.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_mobbrmsd.f90)
   target_include_directories(test_mobbrmsd_2d PRIVATE ${unittest_DIR}/mod_files)
