[add] mod_cov.f90

--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -34,7 +34,8 @@ target_sources(
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_mst.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_batch_run.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
-          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90)
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90)
 
 target_include_directories(${TARGET_2D}
                            PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -117,6 +118,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_c_matrix_2d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -135,6 +137,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_f_matrix_2d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -155,6 +158,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_bb_block_2d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -177,6 +181,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_bb_list_2d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -200,6 +205,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_mobbrmsd_2d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
