--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -34,7 +34,8 @@ target_sources(
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_batch_run.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_mst.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
-          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90)
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90)
 
 target_include_directories(${TARGET_3D}
                            PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -116,6 +117,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_c_matrix_3d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -134,6 +136,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_bb_block_3d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -156,6 +159,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_bb_list_3d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -179,6 +183,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     test_mobbrmsd_3d
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
