--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -33,9 +33,8 @@ target_sources(
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_batch_run.f90
           ${CMAKE_CURRENT_SOURCE_DIR}/../mod_mobbrmsd_mst.f90
-          ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
-          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
-          ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90)
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
+          ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90)
 
 target_include_directories(${TARGET_3D}
                            PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
@@ -86,7 +85,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_gemm_3d)
   target_sources(
     test_gemm_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_gemm.f90)
@@ -99,7 +98,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_rotation_3d)
   target_sources(
     test_rotation_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
@@ -115,9 +114,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_c_matrix_3d)
   target_sources(
     test_c_matrix_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
-            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -134,9 +132,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_bb_block_3d)
   target_sources(
     test_bb_block_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
-            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -157,9 +154,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_bb_list_3d)
   target_sources(
     test_bb_list_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
-            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
@@ -181,9 +177,8 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_executable(test_mobbrmsd_3d)
   target_sources(
     test_mobbrmsd_3d
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/blas_lapack_interface.f90
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/mod_rotation.f90
-            ${CMAKE_CURRENT_SOURCE_DIR}/mod_cov.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
             ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
