--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -96,6 +96,18 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   target_link_libraries(test_gemm_2d PRIVATE unittest)
   add_test(NAME test_gemm_2d COMMAND test_gemm_2d)
 
+  add_executable(test_covdot_2d)
+  target_sources(
+    test_covdot_2d
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/mod_dimspec_functions.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/../mod_kinds.f90
+            ${CMAKE_CURRENT_SOURCE_DIR}/../test/test_covdot.f90)
+  target_include_directories(test_covdot_2d
+                             PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+  target_include_directories(test_covdot_2d PRIVATE ${unittest_DIR}/mod_files)
+  target_link_libraries(test_covdot_2d PRIVATE unittest)
+  add_test(NAME test_covdot_2d COMMAND test_covdot_2d)
+
   add_executable(test_rotation_2d)
   target_sources(
     test_rotation_2d
